HT-7: Fix code issues