@@ -16,7 +16,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -30,7 +29,7 @@ public class HabitServiceImpl implements HabitService {
     public List<HabitDTO> findAll() {
         return habitRepository.findAll().stream()
                 .map(this::mapToHabitDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
