@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,7 +21,7 @@ public class JournalEntryServiceImpl implements JournalEntryService {
     public List<JournalEntryDTO> findAll() {
         return journalEntryRepository.findAll().stream()
                 .map(this::mapToJournalEntryDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
